--- a/sidebarComponent/client/src/components/styles/Playlist.css
+++ b/sidebarComponent/client/src/components/styles/Playlist.css
@@ -1,36 +1,34 @@
 .art {
   height: 50px;
   width: 50px;
-  grid-column: 1;
+  grid-column: 1 / span 1;
   grid-row: 1 / span 3;
 }
 
 .username {
   color: rgb(182, 174, 174);
   justify-self: start;
-  grid-column: 2;
+  grid-column: 2 / span 5;
   grid-row: 1;
-  align-self: start;
 }
 .title {
   color: rgb(182, 174, 174);
   justify-self: start;
-  grid-column: 2;
+  grid-column: 2 / span 5;
   grid-row: 2;
-  align-self: start;
 }
 
 .icon-bar {
   color: rgb(182, 174, 174);
   justify-self: start;
-  grid-column: 2;
+  grid-column: 2 / span 5;
   grid-row: 3;
-  align-self: start;
 }
 
 .container {
   display: grid;
-  grid-template-columns: 1, 4;
+  grid-template-columns: 40px, 40px, 40px, 40px, 40px;
+  grid-gap: 5px;
   grid-template-rows: 1, 1, 1;
   width: 200px;
   margin: 20px;
